--- a/Programmes.html
+++ b/Programmes.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <link rel="stylesheet" href="style.css">
+  <title>Programmes</title>
 </head>
 <body>
-    
-   <header id="site-header">
-     <nav>
-        <a href="index.html" class="logo">Proverbs 31:25</a>
-      </div>
 
-      <ul>
-        <li><a class="about.html">About Us</a>
+
+<header id="site-header">
+  <nav id="main-nav">
+    <a href="index.html" class="logo">Proverbs 31:25</a>
+
+    <ul>
+      <li>
+        <a href="about.html">About Us</a>
         <div class="sub-menu-1">
           <ul>
             <li><a href="Our work.html">Our Work</a></li>
@@ -24,21 +24,20 @@
             <li><a href="Certificates.html">Certificates</a></li>
           </ul>
         </div>
-        </li>
-        <li><a href="Donate.html">Donate</a></li>
-        <li><a href="Blog.html">Blog</a></li>
-        <li><a href="Programmes.html">Programmes</a></li>
-      </ul>
-      </nav>
-  </header>
+      </li>
 
-  <script>
+      <li><a href="Donate.html">Donate</a></li>
+      <li><a href="Blog.html">Blog</a></li>
+      <li><a href="Programmes.html">Programmes</a></li>
+    </ul>
+  </nav>
+</header>
+
+
+<script>
   const header = document.getElementById("site-header");
-  const menuToggle = document.getElementById("menu-toggle");
-  const mainNav = document.getElementById("main-nav");
   let lastScrollY = window.scrollY;
 
-  // Sticky scroll logic
   window.addEventListener("scroll", () => {
     if (window.scrollY > lastScrollY) {
       header.style.top = "-120px";
@@ -47,12 +46,8 @@
     }
     lastScrollY = window.scrollY;
   });
-
-  // Mobile menu toggle
-  menuToggle.addEventListener("click", () => {
-    mainNav.classList.toggle("open");
-  });
 </script>
+
 
 <section class="page-header">
   <div class="page-header-content">
@@ -60,44 +55,105 @@
     <p><a href="index.html">Home</a> / Programmes</p>
   </div>
 </section>
-   
 
 
+<section class="certificates-coming fade-in">
+  <div class="container">
+    <h2>Our Programmes Are Coming Soon</h2>
+
+    <p>
+      We are currently developing impactful programmes focused on
+      empowering women and girls through education, health support,
+      faith-based mentorship, and community outreach.
+    </p>
+
+    <p>
+      Each programme is designed to create lasting change and meaningful
+      opportunities within our communities.
+    </p>
+
+    <div class="coming-soon-box">
+      <i class="fa-solid fa-people-group"></i>
+      <p>
+        Programme details will be published soon.
+        Thank you for your continued support and patience.
+      </p>
+    </div>
+  </div>
+</section>
+
+<section class="programmes-section fade-in">
+  <div class="container">
+
+    <h2 class="section-title">Our Programmes</h2>
+    <p class="section-intro">
+      Our programmes are designed to uplift, empower, and restore dignity
+      through education, health support, mentorship, and advocacy.
+    </p>
+
+    <div class="programmes-grid">
+
+      <!-- PROGRAMME CARD -->
+      <div class="programme-card">
+        <div class="programme-icon">
+          <i class="fa-solid fa-book-open"></i>
+        </div>
+        <h3>Education & Mentorship</h3>
+        <p>
+          Supporting girls through academic assistance, mentorship,
+          and life-skills development.
+        </p>
+        <a href="#" class="programme-btn">Learn More</a>
+      </div>
+
+      <!-- PROGRAMME CARD -->
+      <div class="programme-card">
+        <div class="programme-icon">
+          <i class="fa-solid fa-heart-pulse"></i>
+        </div>
+        <h3>Health & Wellness</h3>
+        <p>
+          Promoting dignity through access to sanitary products,
+          health education, and wellness initiatives.
+        </p>
+        <a href="#" class="programme-btn">Learn More</a>
+      </div>
+
+      <!-- PROGRAMME CARD -->
+      <div class="programme-card">
+        <div class="programme-icon">
+          <i class="fa-solid fa-shield-heart"></i>
+        </div>
+        <h3>GBV Awareness & Support</h3>
+        <p>
+          Raising awareness and supporting safe spaces to combat
+          gender-based violence in communities.
+        </p>
+        <a href="#" class="programme-btn">Learn More</a>
+      </div>
+
+      <!-- PROGRAMME CARD -->
+      <div class="programme-card">
+        <div class="programme-icon">
+          <i class="fa-solid fa-hands-praying"></i>
+        </div>
+        <h3>Faith-Based Empowerment</h3>
+        <p>
+          Encouraging spiritual growth, confidence, and purpose
+          rooted in faith and values.
+        </p>
+        <a href="#" class="programme-btn">Learn More</a>
+      </div>
+
+    </div>
+  </div>
+</section>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<!-- FOOTER -->
 <footer class="footer fade-in">
   <div class="footer-container">
 
-    <!-- Column 1: Menu -->
     <div class="footer-column">
       <h4>Menu</h4>
       <ul>
@@ -108,40 +164,35 @@
       </ul>
     </div>
 
-     <!-- Column 3: Contact -->
     <div class="footer-column">
       <h4>Contact Us</h4>
       <p>Email: Proverbsfoundation3125@gmail.com</p>
-      <p>Phone: +27 63 526 5253 </p>
-      <p>ALT Number: +27 69 637 4437 </p>
+      <p>Phone: +27 63 526 5253</p>
+      <p>ALT Number: +27 69 637 4437</p>
       <p>Location: Pietermaritzburg, South Africa</p>
     </div>
 
-    <!-- Column 4: Newsletter + Social -->
     <div class="footer-column">
       <h4>Stay Connected</h4>
+      <div class="social-icons">
+        <a href="https://www.facebook.com/yourpage" target="_blank" aria-label="Facebook">
+          <i class="fa-brands fa-facebook-f"></i>
+        </a>
+        <a href="https://www.instagram.com/yourpage" target="_blank" aria-label="Instagram">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="https://www.tiktok.com/@yourpage" target="_blank" aria-label="TikTok">
+          <i class="fa-brands fa-tiktok"></i>
+        </a>
+      </div>
+    </div>
 
-     <div class="social-icons">
-  <a href="https://www.facebook.com/yourpage" aria-label="Facebook" target="_blank" class="facebook">
-    <i class="fa-brands fa-facebook-f"></i>
-  </a>
-
-  <a href="https://www.instagram.com/yourpage" aria-label="Instagram" target="_blank" class="instagram">
-    <i class="fa-brands fa-instagram"></i>
-  </a>
-
-  <a href="https://www.tiktok.com/@yourpage" aria-label="TikTok" target="_blank" class="tiktok">
-    <i class="fa-brands fa-tiktok"></i>
-  </a>
-</div>
-
+  </div>
 
   <div class="footer-bottom">
     <p>&copy; Built by Barakhulon Industries.</p>
   </div>
 </footer>
 
-
-  
 </body>
 </html>
