--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=  , initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-
-    <link rel="stylesheet" href="style.css">
-    <title>Home</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
-  <header id="site-header">
-     <nav>
-        <a href="index.html" class="logo">Proverbs 31:25</a>
-      </div>
 
-      <ul>
-        <li><a class="about.html">About Us</a>
+<body>
+
+<header id="site-header">
+  <nav>
+
+    <a href="index.html" class="logo">Proverbs 31:25</a>
+
+    <div id="menu-toggle">
+      <i class="fa-solid fa-bars"></i>
+    </div>
+
+    <ul id="main-nav">
+      <li>
+        <a href="about.html">About Us</a>
         <div class="sub-menu-1">
           <ul>
             <li><a href="Our work.html">Our Work</a></li>
@@ -24,42 +28,22 @@
             <li><a href="Certificates.html">Certificates</a></li>
           </ul>
         </div>
-        </li>
-        <li><a href="Donate.html">Donate</a></li>
-        <li><a href="Blog.html">Blog</a></li>
-        <li><a href="Programmes.html">Programmes</a></li>
-      </ul>
-      </nav>
-  </header>
+      </li>
 
-  <script>
-  const header = document.getElementById("site-header");
-  const menuToggle = document.getElementById("menu-toggle");
-  const mainNav = document.getElementById("main-nav");
-  let lastScrollY = window.scrollY;
+      <li><a href="Donate.html">Donate</a></li>
+      <li><a href="Blog.html">Blog</a></li>
+      <li><a href="Programmes.html">Programmes</a></li>
+    </ul>
 
-  // Sticky scroll logic
-  window.addEventListener("scroll", () => {
-    if (window.scrollY > lastScrollY) {
-      header.style.top = "-120px";
-    } else {
-      header.style.top = "0";
-    }
-    lastScrollY = window.scrollY;
-  });
+  </nav>
+</header>
 
-  // Mobile menu toggle
-  menuToggle.addEventListener("click", () => {
-    mainNav.classList.toggle("open");
-  });
-</script>
-
+<!-- ================= HERO ================= -->
 <section class="hero-image">
-  <img 
-    src="images/WhatsApp Image 2025-12-07 at 20.27.59.jpeg"
-    alt="Water Jetting Solutions"
-    class="hero-bg"
-  >
+  <img src="images/WhatsApp Image 2025-12-07 at 20.27.59.jpeg"
+       alt="Sisterhood"
+       class="hero-bg">
+
   <div class="hero-overlay">
     <h1>Sisterhood defined</h1>
     <p>Proverbs 31:25</p>
@@ -67,112 +51,21 @@
   </div>
 </section>
 
-<br>
-<div class="first-content fade-in">
+<!-- ================= ABOUT ================= -->
+<section class="first-content fade-in">
   <h1>About Proverbs 31:25</h1>
   <p>
-    The Proverbs 31:25 Foundation is a non-profit organization dedicated to supporting girls in Pietermaritzburg, South Africa, by providing them with essential sanitary products and empowering them to overcome challenges.
+    The Proverbs 31:25 Foundation is a non-profit organization dedicated to
+    supporting girls in Pietermaritzburg, South Africa, by providing essential
+    sanitary products and empowering them to overcome challenges.
   </p>
-  <a href="Our work.html" class="hero-btn">About us</a>
-</div>
-<br>
+  <a href="Our work.html" class="hero-btn">About Us</a>
+</section>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<!-- ================= FOOTER ================= -->
 <footer class="footer fade-in">
   <div class="footer-container">
 
-    <!-- Column 1: Menu -->
     <div class="footer-column">
       <h4>Menu</h4>
       <ul>
@@ -183,40 +76,72 @@
       </ul>
     </div>
 
-    <!-- Column 3: Contact -->
     <div class="footer-column">
       <h4>Contact Us</h4>
       <p>Email: Proverbsfoundation3125@gmail.com</p>
-      <p>Phone: +27 63 526 5253 </p>
-      <p>ALT Number: +27 69 637 4437 </p>
-      <p>Location: Pietermaritzburg, South Africa</p>
+      <p>Phone: +27 63 526 5253</p>
+      <p>ALT: +27 69 637 4437</p>
+      <p>Pietermaritzburg, South Africa</p>
     </div>
 
-    <!-- Column 4: Newsletter + Social -->
     <div class="footer-column">
       <h4>Stay Connected</h4>
+      <div class="social-icons">
+        <a href="https://www.facebook.com/profile.php?id=61586166464856" target="_blank" class="facebook">
+          <i class="fa-brands fa-facebook-f"></i>
+        </a>
+        <a href="https://www.instagram.com/31pro_verbs" target="_blank" class="instagram">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="https://www.tiktok.com/@sisterhood.define" target="_blank" class="tiktok">
+          <i class="fa-brands fa-tiktok"></i>
+        </a>
+      </div>
+    </div>
 
-     <div class="social-icons">
-  <a href="https://www.facebook.com/profile.php?id=61586166464856" aria-label="Facebook" target="_blank" class="facebook">
-    <i class="fa-brands fa-facebook-f"></i>
-  </a>
-
-  <a href="https://www.instagram.com/31pro_verbs?igsh=MXN3MmM2bmpjYTJjeg%3D%3D&utm_source=qr" aria-label="Instagram" target="_blank" class="instagram">
-    <i class="fa-brands fa-instagram"></i>
-  </a>
-
-  <a href="https://www.tiktok.com/@sisterhood.define?_r=1&_t=ZM-932qZhVCcB6" aria-label="TikTok" target="_blank" class="tiktok">
-    <i class="fa-brands fa-tiktok"></i>
-  </a>
-</div>
-
+  </div>
 
   <div class="footer-bottom">
     <p>&copy; Built by Barakhulon Industries.</p>
   </div>
 </footer>
 
+<!-- ================= JAVASCRIPT ================= -->
+<script>
+/* ===== Sticky Header ===== */
+const header = document.getElementById("site-header");
+let lastScrollY = window.scrollY;
 
-  
+window.addEventListener("scroll", () => {
+  if (window.scrollY > lastScrollY) {
+    header.style.top = "-120px";
+  } else {
+    header.style.top = "0";
+  }
+  lastScrollY = window.scrollY;
+});
+
+/* ===== Mobile Menu ===== */
+const menuToggle = document.getElementById("menu-toggle");
+const mainNav = document.getElementById("main-nav");
+
+menuToggle.addEventListener("click", () => {
+  mainNav.classList.toggle("open");
+});
+
+/* ===== Fade-in Animation ===== */
+const faders = document.querySelectorAll(".fade-in");
+
+const observer = new IntersectionObserver(entries => {
+  entries.forEach(entry => {
+    if (entry.isIntersecting) {
+      entry.target.classList.add("visible");
+    }
+  });
+}, { threshold: 0.2 });
+
+faders.forEach(el => observer.observe(el));
+</script>
+
 </body>
 </html>
