--- a/about.html
+++ b/about.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+  <!-- Main CSS -->
+  <link rel="stylesheet" href="style.css">
+
+  <title>Donate | Proverbs 31:25 Foundation</title>
 </head>
 <body>
-    
-    <header id="site-header">
-     <nav>
-        <a href="index.html" class="logo">Proverbs 31:25</a>
-      </div>
 
-      <ul>
-        <li><a class="about.html">About Us</a>
+<!-- HEADER -->
+<header id="site-header">
+  <nav id="main-nav">
+    <a href="index.html" class="logo">Proverbs 31:25</a>
+
+    <ul>
+      <li>
+        <a href="about.html">About Us</a>
         <div class="sub-menu-1">
           <ul>
             <li><a href="Our work.html">Our Work</a></li>
@@ -23,21 +29,20 @@
             <li><a href="Certificates.html">Certificates</a></li>
           </ul>
         </div>
-        </li>
-        <li><a href="Donate.html">Donate</a></li>
-        <li><a href="Blog.html">Blog</a></li>
-        <li><a href="Programmes.html">Programmes</a></li>
-      </ul>
-      </nav>
-  </header>
+      </li>
 
-  <script>
+      <li><a href="Donate.html">Donate</a></li>
+      <li><a href="Blog.html">Blog</a></li>
+      <li><a href="Programmes.html">Programmes</a></li>
+    </ul>
+  </nav>
+</header>
+
+<!-- HEADER SCROLL SCRIPT -->
+<script>
   const header = document.getElementById("site-header");
-  const menuToggle = document.getElementById("menu-toggle");
-  const mainNav = document.getElementById("main-nav");
   let lastScrollY = window.scrollY;
 
-  // Sticky scroll logic
   window.addEventListener("scroll", () => {
     if (window.scrollY > lastScrollY) {
       header.style.top = "-120px";
@@ -46,12 +51,9 @@
     }
     lastScrollY = window.scrollY;
   });
-
-  // Mobile menu toggle
-  menuToggle.addEventListener("click", () => {
-    mainNav.classList.toggle("open");
-  });
 </script>
+
+<!-- PAGE HEADER -->
 <section class="page-header">
   <div class="page-header-content">
     <h1>Donate</h1>
@@ -59,23 +61,125 @@
   </div>
 </section>
 
+<!-- ABOUT DONATION -->
+<section class="donate-about fade-in">
+  <div class="container">
+    <h2>Support Our Mission</h2>
+    <p>
+      Proverbs 31:25 Foundation is dedicated to empowering women and girls
+      through faith, education, health support, and advocacy.
+      Your contribution helps us create opportunities, restore dignity,
+      and build stronger communities.
+    </p>
+  </div>
+</section>
+
+<!-- VISION & MISSION -->
+<section class="vision-mission">
+  <div class="container vision-grid">
+
+    <div class="vision-card">
+      <i class="fa-solid fa-eye"></i>
+      <h3>Our Vision</h3>
+      <p>
+        To see empowered, confident women and girls who are equipped
+        to walk boldly into their future with dignity and purpose.
+      </p>
+    </div>
+
+    <div class="vision-card">
+      <i class="fa-solid fa-bullseye"></i>
+      <h3>Our Mission</h3>
+      <p>
+        To provide holistic support through education, mentorship,
+        health initiatives, and faith-based programmes that transform lives.
+      </p>
+    </div>
+
+  </div>
+</section>
+
+<section class="founders-section fade-in">
+  <div class="container founders-layout">
+
+    <!-- LEFT TEXT -->
+    <div class="founders-text">
+      <h2>Founders</h2>
+      <p>
+        Meet the visionaries who laid the foundation of Proverbs 31:25 Foundation.
+        Their passion, faith, and commitment continue to guide our mission.
+      </p>
+    </div>
+
+    <!-- FOUNDERS GRID -->
+    <div class="founders-grid">
+
+      <!-- FOUNDER 1 -->
+      <div class="founder-card">
+        <img src="images/founder1.jpg" alt="Founder Name">
+        <h4>Founder Name</h4>
+        <span>Co-Founder</span>
+      </div>
+
+      <!-- FOUNDER 2 -->
+      <div class="founder-card">
+        <img src="images/founder2.jpg" alt="Founder Name">
+        <h4>Founder Name</h4>
+        <span>Co-Founder</span>
+      </div>
+
+      <!-- FOUNDER 3 -->
+      <div class="founder-card">
+        <img src="images/founder3.jpg" alt="Founder Name">
+        <h4>Founder Name</h4>
+        <span>Co-Founder</span>
+      </div>
+
+      <!-- FOUNDER 4 -->
+      <div class="founder-card">
+        <img src="images/founder4.jpg" alt="Founder Name">
+        <h4>Founder Name</h4>
+        <span>Co-Founder</span>
+      </div>
+
+    </div>
+  </div>
+</section>
 
 
+<!-- DONATION SECTION -->
+<section class="donation-section fade-in">
+  <div class="container donation-box">
 
+    <h2>Make a Difference Today</h2>
+    <p>
+      Every contribution, big or small, helps us reach more women and girls
+      in need. Your generosity fuels hope and lasting change.
+    </p>
 
+    <div class="donation-options">
+      <div class="donation-card">
+        <i class="fa-solid fa-hand-holding-heart"></i>
+        <h4>Once-Off Donation</h4>
+        <p>Support our programmes with a single contribution.</p>
+      </div>
 
+      <div class="donation-card">
+        <i class="fa-solid fa-repeat"></i>
+        <h4>Monthly Support</h4>
+        <p>Partner with us through ongoing monthly giving.</p>
+      </div>
+    </div>
 
+    <a href="Donate.html" class="donate-btn">Donate</a>
 
+  </div>
+</section>
 
-
-
-
-
-
+<!-- FOOTER -->
 <footer class="footer fade-in">
   <div class="footer-container">
 
-   <!-- Column 1: Menu -->
     <div class="footer-column">
       <h4>Menu</h4>
       <ul>
@@ -86,39 +190,29 @@
       </ul>
     </div>
 
-     <!-- Column 3: Contact -->
     <div class="footer-column">
       <h4>Contact Us</h4>
       <p>Email: Proverbsfoundation3125@gmail.com</p>
-      <p>Phone: +27 63 526 5253 </p>
-      <p>ALT Number: +27 69 637 4437 </p>
+      <p>Phone: +27 63 526 5253</p>
+      <p>ALT Number: +27 69 637 4437</p>
       <p>Location: Pietermaritzburg, South Africa</p>
     </div>
 
-    <!-- Column 4: Newsletter + Social -->
     <div class="footer-column">
       <h4>Stay Connected</h4>
+      <div class="social-icons">
+        <a href="#" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+        <a href="#" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#" aria-label="TikTok"><i class="fa-brands fa-tiktok"></i></a>
+      </div>
+    </div>
 
-     <div class="social-icons">
-  <a href="https://www.facebook.com/yourpage" aria-label="Facebook" target="_blank" class="facebook">
-    <i class="fa-brands fa-facebook-f"></i>
-  </a>
-
-  <a href="https://www.instagram.com/yourpage" aria-label="Instagram" target="_blank" class="instagram">
-    <i class="fa-brands fa-instagram"></i>
-  </a>
-
-  <a href="https://www.tiktok.com/@yourpage" aria-label="TikTok" target="_blank" class="tiktok">
-    <i class="fa-brands fa-tiktok"></i>
-  </a>
-</div>
-
+  </div>
 
   <div class="footer-bottom">
     <p>&copy; Built by Barakhulon Industries.</p>
   </div>
 </footer>
-
 
 </body>
 </html>
