--- a/about.html
+++ b/about.html
@@ -56,8 +56,8 @@
 <!-- PAGE HEADER -->
 <section class="page-header">
   <div class="page-header-content">
-    <h1>Donate</h1>
-    <p><a href="index.html">Home</a> / Donate</p>
+    <h1>About</h1>
+    <p><a href="index.html">Home</a> / About</p>
   </div>
 </section>
 
@@ -116,29 +116,29 @@
 
       <!-- FOUNDER 1 -->
       <div class="founder-card">
-        <img src="images/founder1.jpg" alt="Founder Name">
-        <h4>Founder Name</h4>
+        <img src="images/WhatsApp Image 2026-02-01 at 21.03.16.jpeg" alt="Founder Name">
+        <h4>Zekhethelo Zungu</h4>
         <span>Co-Founder</span>
       </div>
 
       <!-- FOUNDER 2 -->
       <div class="founder-card">
-        <img src="images/founder2.jpg" alt="Founder Name">
-        <h4>Founder Name</h4>
+        <img src="images/WhatsApp Image 2026-02-01 at 22.37.32.jpeg" alt="Founder Name">
+        <h4>Aphiwe Mshengu</h4>
         <span>Co-Founder</span>
       </div>
 
       <!-- FOUNDER 3 -->
       <div class="founder-card">
-        <img src="images/founder3.jpg" alt="Founder Name">
-        <h4>Founder Name</h4>
+        <img src="images/WhatsApp Image 2026-02-01 at 22.39.10.jpeg" alt="Founder Name">
+        <h4>Amahle Mkhize</h4>
         <span>Co-Founder</span>
       </div>
 
       <!-- FOUNDER 4 -->
       <div class="founder-card">
-        <img src="images/founder4.jpg" alt="Founder Name">
-        <h4>Founder Name</h4>
+        <img src="images/WhatsApp Image 2026-02-01 at 23.13.05.jpeg" alt="Founder Name">
+        <h4>Avela Dladla</h4>
         <span>Co-Founder</span>
       </div>
 
