--- a/contact us.html
+++ b/contact us.html
@@ -36,7 +36,7 @@
           <ul>
             <li><a href="Our work.html">Our Work</a></li>
             <li><a href="contact us.html">Contact Us</a></li>
-            <li><a href="Certificates.html">Certificates</a></li>
+            <li><a href="certificates.html">Certificates</a></li>
           </ul>
         </div>
       </li>
